# mac0352-2022

ep0/: pergunta2.pcapng  respostas.txt
ep1/: .dockerignore  .gitignore
ep1/includes/: constants.h  message.h  mqtt.h  util.h
ep1/src/: broker.c  main.c  mqtt.c  util.c
ep2/: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  LEIAME  Makefile  docker-compose.yml
ep2/includes/: client-functionality.hpp  client-helper.h  game-board.h  game-board.hpp  game-piece.h  game-piece.hpp  log.h  package-header.h  package-type.h  packages.h  packages.hpp  server-functionality.hpp  server-helper.h  server-io.hpp  types.h  util.h  util.hpp
ep2/includes/util/: create-user-package.h  package-header.h  packages.hpp  util.hpp
ep2/slides/: client-silence.pcapng  client-talking.pcapng  server-silence.pcapng  server-talking.pcapng
ep2/src/: Makefile  client-functionality.cpp  client-helper.cpp  client.cpp  ep2-client.cpp  ep2-server.cpp  game-board.cpp  log.cpp  package-header.cpp  packages.cpp  server-functionality.cpp  server-helper.cpp  server-io.cpp  server.cpp  users.db  util.cpp
ep2/src/util/: change-password-ack-package.cpp  change-password-ack-package.h  change-password-package.cpp  change-password-package.h  create-user-ack-package.cpp  create-user-ack-package.h  create-user-package.cpp  login-ack-package.cpp  login-ack-package.h  login-package.cpp  login-package.h  logout-package.cpp  logout-package.h  package-header.cpp  packages.cpp  req-connected-users-package.cpp  req-connected-users-package.h  util.cpp
ep3/: mac0352-relatorio-ep3.tex
ep4/Spring4Shell-POC/: .dockerignore  Dockerfile  docker-compose.yml  pom-fixed.xml  pom.xml  run.sh
ep4/Spring4Shell-POC/src/main/java/com/reznok/helloworld/: Greeting.java
